    moved from finagle-core to util-core and renamed to
    `c.t.io.ByteReader` and `c.t.io.ByteWriter` respectively. They
    are now also exposed publicly. ``RB_ID=911639``

API Changes:

  * util: util-zk-commons was removed, since it was only a connector between
    util and commons, which was not widely used.  ``RB_Id=910721``

6.42.0  2017-03-10

New Features:

  * util-core: Promoted the positional `Buf.Indexed` API to be a first-class
    part of `c.t.io.Buf`. If you have a custom implementation of `Buf` it
    will require some effort to become compatible. ``RB_ID=907231``

API Changes:

  * util-app: Set failFastUntilParsed on created flag added to `c.t.app.Flags`
    via `c.t.app.Flags#add`. ``RB_ID=908804``

  * util-core: Remove deprecated `c.t.io.ConcatBuf` which is replaced by
    `c.t.io.Buf.apply(Iterable[Buf])`. ``RB_ID=907180``

  * util-core: Remove deprecated `c.t.util.RingBuffer`. Use Guava's
    `EvictingQueue`. ``RB_ID=907516``

  * util-core: Remove deprecated `c.t.concurrent.ConcurrentPool`. Prefer
    Finagle's `c.t.f.pool.BufferingPool`. ``RB_ID=907516``

  * util-core: Remove deprecated `c.t.concurrent.ConcurrentMultiMap`. Prefer
    Guava's Multimap. ``RB_ID=907516``

Dependencies:

  * util: Bump guava to 19.0. ``RB_ID=907807``

6.41.0  2017-02-03

New Features:

  * util-app: App now exposes `closeOnExit` publicly. ``RB_ID=906890``

  * util-core: Add method to `Buf` to efficiently write to a nio `ByteBuffer`.
    ``RB_ID=910152``

  * util-core: Add Java-friendly API to Scala.java for converting from
    a Java 8 `Optional` to a Scala `Option`. ``RB_ID=906512``

  * util-core: Introduced a positional `Buf` API, `Buf.Indexed`, and retrofitted
    all existing implementations in util and finagle to adopt it. It is now used
    throughout for a reductions in allocation and latency. In two services at
    Twitter we saw a 1–2% reduction in allocations. We plan to open the API to